--- a/pom.xml
+++ b/pom.xml
@@ -293,6 +293,7 @@
                         <exclude>**/CHANGELOG</exclude>
                         <exclude>src/quality/**</exclude>
                         <exclude>src/doc/images/**</exclude>
+                        <exclude>src/it/**/mlr/**</exclude>
                         <exclude>src/it/resources/**</exclude>
                         <exclude>src/it/**/invoker.properties</exclude>
                         <exclude>src/test/resources/**</exclude>
